--- a/aboutme.html
+++ b/aboutme.html
@@ -24,9 +24,9 @@
 		<p>I like watching Formula1 which has now turned into a practice that evey weekend, I can't sleep without watching it XD</p>
 
 		<h2>I AM A HUGE FAN OF SEBASTIAN VETTEL!!!</h2>
-		<img src="https://scontent.fmaa12-2.fna.fbcdn.net/v/t1.6435-9/196111663_2130031997153771_5278487192733770372_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=730e14&_nc_ohc=7h6dkeUwV_sAX-RvdRM&_nc_ht=scontent.fmaa12-2.fna&oh=884d370d32072b374bf4e6956068abac&oe=61C7D324" alt="SEBASTIAN" width="20%">
+		<img src="https://www.formula1.com/content/dam/fom-website/Upgrade/DriverOfTheDay2021/1920x1080-vettel.jpg" alt="SEBASTIAN" width="20%">
 
-		<img src="https://scontent.fmaa12-2.fna.fbcdn.net/v/t1.6435-9/196535440_10158754902353355_8960506519742786894_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=730e14&_nc_ohc=s8OipAn4tsoAX9NJ9Iu&_nc_ht=scontent.fmaa12-2.fna&oh=2faac92856b616fdc704df8735073f04&oe=61C91B56" alt="seb" width="20%">
+		<img src="https://img.redbull.com/images/c_limit,w_1500,h_1000,f_auto,q_auto/redbullcom/2013/10/28/1331617874098_23/sebastian-vettel-formula-one-indian-grand-prix-fourth-world-championship-celebration" alt="seb" width="20%">
 
 		<br>
 		<p>
